--- a/app/src/main/res/layout/exercise_item.xml
+++ b/app/src/main/res/layout/exercise_item.xml
@@ -50,7 +50,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tvExercise"
             app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/favorite_icon" />
+            android:src="@drawable/compartilhamento" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
