--- a/app/src/main/res/navigation/login_navigation.xml
+++ b/app/src/main/res/navigation/login_navigation.xml
@@ -19,5 +19,13 @@
         android:id="@+id/loginGoogleFragment"
         android:name="com.example.digitalfit.features.login.LoginGoogleFragment"
         android:label="fragment_login_google"
-        tools:layout="@layout/fragment_login_google" />
+        tools:layout="@layout/fragment_login_google" >
+        <action
+            android:id="@+id/action_loginGoogleFragment_to_mainActivity"
+            app:destination="@id/mainActivity" />
+    </fragment>
+    <activity
+        android:id="@+id/mainActivity"
+        android:name="com.example.digitalfit.MainActivity"
+        android:label="MainActivity" />
 </navigation>
