--- a/app/src/main/res/navigation/login_navigation.xml
+++ b/app/src/main/res/navigation/login_navigation.xml
@@ -13,17 +13,16 @@
         <action
             android:id="@+id/action_loginFragment_to_loginGoogleFragment"
             app:destination="@id/loginGoogleFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_mainActivity"
+            app:destination="@id/mainActivity" />
     </fragment>
 
     <fragment
         android:id="@+id/loginGoogleFragment"
         android:name="com.example.digitalfit.features.login.LoginGoogleFragment"
         android:label="fragment_login_google"
-        tools:layout="@layout/fragment_login_google" >
-        <action
-            android:id="@+id/action_loginGoogleFragment_to_mainActivity"
-            app:destination="@id/mainActivity" />
-    </fragment>
+        tools:layout="@layout/fragment_login_google" />
     <activity
         android:id="@+id/mainActivity"
         android:name="com.example.digitalfit.MainActivity"
