--- a/app/src/main/res/layout/exercise_item.xml
+++ b/app/src/main/res/layout/exercise_item.xml
@@ -37,7 +37,7 @@
             app:layout_constraintStart_toEndOf="@id/ivExercise"
             app:layout_constraintEnd_toStartOf="@id/ibExercise"
             app:layout_constraintTop_toTopOf="parent"
-             app:layout_constraintHorizontal_bias="0"/>
+            app:layout_constraintHorizontal_bias="0"/>
 
         <ImageButton
             android:id="@+id/ibExercise"
@@ -50,7 +50,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tvExercise"
             app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/compartilhamento" />
+            android:src="@drawable/favorite_icon" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
