--- a/app/src/main/res/layout/exercise_item.xml
+++ b/app/src/main/res/layout/exercise_item.xml
@@ -46,7 +46,7 @@
             android:background="?attr/selectableItemBackground"
             android:scaleType="fitCenter"
             android:layout_marginEnd="@dimen/horizontal_margin_extra"
-
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tvExercise"
