--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/telafundo"
+    android:background="@drawable/screen"
     android:focusableInTouchMode="false"
     android:visibility="visible"
+    android:layout_gravity="center"
     tools:context=".features.login.LoginFragment">
 
 
@@ -18,51 +19,26 @@
         android:layout_marginTop="150dp"
         android:layout_marginEnd="84dp"
         android:text="@string/digital_fit"
-        android:textSize="30sp"
+        android:textSize="40sp"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@id/btEmail"
+        android:textAlignment="center"
+        style="@style/TextAppearance.MaterialComponents.Headline2"
+        app:layout_constraintVertical_bias="0.05"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btEmail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:backgroundTint="#3F51B5"
-        android:text="@string/entrar_com_email"
-        app:layout_constraintBottom_toTopOf="@id/btGoogle"
-        app:layout_constraintEnd_toEndOf="@id/txDigitalFit"
-        app:layout_constraintStart_toStartOf="@id/txDigitalFit"
-        app:layout_constraintTop_toBottomOf="@id/txDigitalFit" />
-
-    <Button
+    <com.google.android.gms.common.SignInButton
         android:id="@+id/btGoogle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:backgroundTint="#F4F4F4"
-        android:textColor="@color/black"
-        android:textSize="12sp"
-        android:text="@string/entrar_com_conta_google"
+        app:colorScheme="light"
+        app:buttonSize="wide"
+        app:layout_constraintVertical_bias="0.25"
         app:layout_constraintEnd_toEndOf="@id/txDigitalFit"
         app:layout_constraintStart_toStartOf="@id/txDigitalFit"
-        app:layout_constraintTop_toBottomOf="@id/btEmail"
-        app:layout_constraintBottom_toTopOf="@id/btRegister"
-        app:strokeColor="#0B0A0A" />
-
-
-    <Button
-        android:id="@+id/btRegister"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:backgroundTint="#3F51B5"
-        android:text="@string/cadastre_se"
-        app:layout_constraintEnd_toEndOf="@id/txDigitalFit"
-        app:layout_constraintStart_toStartOf="@id/txDigitalFit"
-        app:layout_constraintTop_toBottomOf="@id/btGoogle" />
+        app:layout_constraintTop_toBottomOf="@id/txDigitalFit"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
